# telegram-bots

./: .gitignore  README.md
chat/: Makefile  pyproject.toml
chat/app/: bot.py  cache.py  messages.py  models.py  settings.py  test_messages.py
chat/app/content/: prompts.py  responses.py
chat/tests/: test_cache.py  test_messages.py
codex/: Dockerfile  Makefile
codex/app/: bot.py  settings.py
dalee/: Makefile  pyproject.toml
dalee/app/: bot.py  settings.py
dalle/: Dockerfile  Makefile  pyproject.toml
dalle/app/: bot.py  client.py  settings.py
dalle/app/content/: responses.py
launch/: bots.sh  codex.sh
launch/systemctl/: bots.service  codex.service
