[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Artem Khokhlov <god.bless.data.science@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.0"
pytelegrambotapi = "^4.8.0"
python-dotenv = "^0.21.0"
cachetools = "^5.3.0"
telebot = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
